tests/sources/invalid/generics/generic_class_type_arg_errors.fire
// Malformed type-argument lists in a generic class instantiation used as a
// variable-declaration type, e.g. `Pair<TYPE_ARGS> name = ...;`.
class Pair<T, U> {
    T a;
    U b;

    Pair(T a, U b) {
        this.a = a;
        this.b = b;
    }
}

// Missing first type argument.
int32 main() {
    Pair<,int32> p = Pair(1, 2);  //~ ERROR FS-PARSE-0010 @10
//~^ ERROR FS-PARSE-0010 @16
//~^^ ERROR FS-PARSE-0003 @18
    return 0;
}
